overflow issue fixed, reduced white space between two plots

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -152,18 +152,23 @@ button .tablink {
 	margin-bottom: 0;
 	height: 70vh;
 	width: 100vw;
-	overflow-y: visible;
+	overflow-y: scroll;
+	overflow-x: hidden;
 	background-color: #fdfdfd;
 }
 
 #eventMap {
-	margin:0;
-	height: 70vh;
+	margin: auto 0;
+	padding: 0;
+	height: 80%;
 	width: 100vw;
-	margin-top:0;
-	margin-bottom: 0;
 	overflow: hidden;
 	background-color: #fdfdfd;
+}
+
+#eventTable {
+	height: 100%;
+	width: 100%;
 }
 
 footer {
